// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/FileUploadField/FileUploadInput should display a file upload input 1`] = `
".a {
  appearance: none;
}
.b {
  background-clip: padding-box;
}
.c {
  background-color: #fff;
}
.d {
  color: #212529;
}
.e {
  display: block;
}
.f {
  font-size: 1rem;
}
.g {
  font-weight: 400;
}
.h {
  line-height: 1.5;
}
.i {
  width: 100%;
}
.j {
  cursor: pointer;
}
.o:disabled {
  background-color: #e9ecef;
}
.p:disabled {
  cursor: default;
}
.q:disabled {
  opacity: 1;
}
.z::file-selector-button {
  margin-right: 0.75rem;
}
.ab::file-selector-button {
  margin-end: 0.75rem;
}
.ac::file-selector-button {
  margin-inline-end: 0.75rem;
}
.ae::file-selector-button {
  color: #212529;
}
.af::file-selector-button {
  background-color: #f8f9fa;
}
.ag::file-selector-button {
  pointer-events: none;
}
.ah::file-selector-button {
  border-inline-end-width: 1px;
}
.am::file-selector-button:hover:not(:disabled):not([readonly]) {
  background-color: #e9ecef;
}
.an::file-selector-button {
  transition-property: color, background-color, border-color, box-shadow;
}
.ao::file-selector-button {
  transition-duration: 0.15s, 0.15s, 0.15s, 0.15s;
}
.ap::file-selector-button {
  transition-delay: ease-in-out, ease-in-out, ease-in-out, ease-in-out;
}
.aq::file-selector-button {
  transition-timing-function: ease, ease, ease, ease;
}
.ar::file-selector-button {
  border-top-left-radius: 0;
}
.as::file-selector-button {
  border-top-right-radius: 0;
}
.at::file-selector-button {
  border-bottom-right-radius: 0;
}
.au::file-selector-button {
  border-bottom-left-radius: 0;
}
.av::file-selector-button {
  border-top-width: 0;
}
.aw::file-selector-button {
  border-right-width: 0;
}
.ax::file-selector-button {
  border-bottom-width: 0;
}
.ay::file-selector-button {
  border-left-width: 0;
}
.az::file-selector-button {
  border-top-style: solid;
}
.ba::file-selector-button {
  border-right-style: solid;
}
.bb::file-selector-button {
  border-bottom-style: solid;
}
.bc::file-selector-button {
  border-left-style: solid;
}
.bd::file-selector-button {
  border-top-color: inherit;
}
.be::file-selector-button {
  border-right-color: inherit;
}
.bf::file-selector-button {
  border-bottom-color: inherit;
}
.bg::file-selector-button {
  border-left-color: inherit;
}
.bh::file-selector-button {
  margin-top: -0.375rem;
}
.bi::file-selector-button {
  margin-bottom: -0.375rem;
}
.bj::file-selector-button {
  margin-left: -0.75rem;
}
.bk::file-selector-button {
  padding-top: 0.375rem;
}
.bl::file-selector-button {
  padding-right: 0.75rem;
}
.bm::file-selector-button {
  padding-bottom: 0.375rem;
}
.bn::file-selector-button {
  padding-left: 0.75rem;
}
.bo {
  transition-property: border-color, box-shadow;
}
.bp {
  transition-duration: 0.15s, 0.15s;
}
.bq {
  transition-delay: ease-in-out, ease-in-out;
}
.br {
  transition-timing-function: ease, ease;
}
.bs {
  padding-top: 0.375rem;
}
.bt {
  padding-right: 0.75rem;
}
.bu {
  padding-bottom: 0.375rem;
}
.bv {
  padding-left: 0.75rem;
}
.bw {
  overflow-x: hidden;
}
.bx {
  overflow-y: hidden;
}
.by {
  border-top-left-radius: 0.375rem;
}
.bz {
  border-top-right-radius: 0.375rem;
}
.ca {
  border-bottom-right-radius: 0.375rem;
}
.cb {
  border-bottom-left-radius: 0.375rem;
}
.cc {
  border-top-width: 1px;
}
.cd {
  border-right-width: 1px;
}
.ce {
  border-bottom-width: 1px;
}
.cf {
  border-left-width: 1px;
}
.cg {
  border-top-style: solid;
}
.ch {
  border-right-style: solid;
}
.ci {
  border-bottom-style: solid;
}
.cj {
  border-left-style: solid;
}
.ck {
  border-top-color: #dee2e6;
}
.cl {
  border-right-color: #dee2e6;
}
.cm {
  border-bottom-color: #dee2e6;
}
.cn {
  border-left-color: #dee2e6;
}
.r:focus {
  background-color: #fff;
}
.s:focus {
  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
}
.t:focus {
  color: #212529;
}
.u:focus {
  outline-width: 0;
}
.v:focus {
  border-top-color: #86b7fe;
}
.w:focus {
  border-right-color: #86b7fe;
}
.x:focus {
  border-bottom-color: #86b7fe;
}
.y:focus {
  border-left-color: #86b7fe;
}
@media (prefers-reduced-motion: reduce) {
  .k {
    transition-property: none;
  }
  .l {
    transition-duration: 0s;
  }
  .m {
    transition-delay: 0s;
  }
  .n {
    transition-timing-function: ease;
  }
  .ai::file-selector-button {
    transition-property: none;
  }
  .aj::file-selector-button {
    transition-duration: 0s;
  }
  .ak::file-selector-button {
    transition-delay: 0s;
  }
  .al::file-selector-button {
    transition-timing-function: ease;
  }
}


<input
  data-testid="file-upload"
  class="a ab ac ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b ba bb bc bd be bf bg bh bi bj bk bl bm bn bo bp bq br bs bt bu bv bw bx by bz c ca cb cc cd ce cf cg ch ci cj ck cl cm cn d e f g h i j k l m n o p q r s t u v w x y z form-control file-upload"
  type="file"
/>;
"
`;

exports[`components/FileUploadField/FileUploadInput should display a file upload input of size large 1`] = `
".a {
  appearance: none;
}
.b {
  background-clip: padding-box;
}
.c {
  background-color: #fff;
}
.d {
  color: #212529;
}
.e {
  display: block;
}
.f {
  font-size: 1.25rem;
}
.g {
  font-weight: 400;
}
.h {
  line-height: 1.5;
}
.i {
  width: 100%;
}
.j {
  cursor: pointer;
}
.o:disabled {
  background-color: #e9ecef;
}
.p:disabled {
  cursor: default;
}
.q:disabled {
  opacity: 1;
}
.z::file-selector-button {
  margin-right: 1rem;
}
.ab::file-selector-button {
  margin-end: 0.75rem;
}
.ac::file-selector-button {
  margin-inline-end: 1rem;
}
.ae::file-selector-button {
  color: #212529;
}
.af::file-selector-button {
  background-color: #f8f9fa;
}
.ag::file-selector-button {
  pointer-events: none;
}
.ah::file-selector-button {
  border-inline-end-width: 1px;
}
.am::file-selector-button:hover:not(:disabled):not([readonly]) {
  background-color: #e9ecef;
}
.an::file-selector-button {
  -webkit-margin-end: 1rem;
}
.ao::file-selector-button {
  transition-property: color, background-color, border-color, box-shadow;
}
.ap::file-selector-button {
  transition-duration: 0.15s, 0.15s, 0.15s, 0.15s;
}
.aq::file-selector-button {
  transition-delay: ease-in-out, ease-in-out, ease-in-out, ease-in-out;
}
.ar::file-selector-button {
  transition-timing-function: ease, ease, ease, ease;
}
.as::file-selector-button {
  border-top-left-radius: 0;
}
.at::file-selector-button {
  border-top-right-radius: 0;
}
.au::file-selector-button {
  border-bottom-right-radius: 0;
}
.av::file-selector-button {
  border-bottom-left-radius: 0;
}
.aw::file-selector-button {
  border-top-width: 0;
}
.ax::file-selector-button {
  border-right-width: 0;
}
.ay::file-selector-button {
  border-bottom-width: 0;
}
.az::file-selector-button {
  border-left-width: 0;
}
.ba::file-selector-button {
  border-top-style: solid;
}
.bb::file-selector-button {
  border-right-style: solid;
}
.bc::file-selector-button {
  border-bottom-style: solid;
}
.bd::file-selector-button {
  border-left-style: solid;
}
.be::file-selector-button {
  border-top-color: inherit;
}
.bf::file-selector-button {
  border-right-color: inherit;
}
.bg::file-selector-button {
  border-bottom-color: inherit;
}
.bh::file-selector-button {
  border-left-color: inherit;
}
.bi::file-selector-button {
  margin-top: -0.5rem;
}
.bj::file-selector-button {
  margin-bottom: -0.5rem;
}
.bk::file-selector-button {
  margin-left: -1rem;
}
.bl::file-selector-button {
  padding-top: 0.5rem;
}
.bm::file-selector-button {
  padding-right: 1rem;
}
.bn::file-selector-button {
  padding-bottom: 0.5rem;
}
.bo::file-selector-button {
  padding-left: 1rem;
}
.bp {
  min-height: calc(1.5em + 1rem + 2px);
}
.bq {
  transition-property: border-color, box-shadow;
}
.br {
  transition-duration: 0.15s, 0.15s;
}
.bs {
  transition-delay: ease-in-out, ease-in-out;
}
.bt {
  transition-timing-function: ease, ease;
}
.bu {
  padding-top: 0.5rem;
}
.bv {
  padding-right: 1rem;
}
.bw {
  padding-bottom: 0.5rem;
}
.bx {
  padding-left: 1rem;
}
.by {
  overflow-x: hidden;
}
.bz {
  overflow-y: hidden;
}
.ca {
  border-top-left-radius: 0.5rem;
}
.cb {
  border-top-right-radius: 0.5rem;
}
.cc {
  border-bottom-right-radius: 0.5rem;
}
.cd {
  border-bottom-left-radius: 0.5rem;
}
.ce {
  border-top-width: 1px;
}
.cf {
  border-right-width: 1px;
}
.cg {
  border-bottom-width: 1px;
}
.ch {
  border-left-width: 1px;
}
.ci {
  border-top-style: solid;
}
.cj {
  border-right-style: solid;
}
.ck {
  border-bottom-style: solid;
}
.cl {
  border-left-style: solid;
}
.cm {
  border-top-color: #dee2e6;
}
.cn {
  border-right-color: #dee2e6;
}
.co {
  border-bottom-color: #dee2e6;
}
.cp {
  border-left-color: #dee2e6;
}
.r:focus {
  background-color: #fff;
}
.s:focus {
  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
}
.t:focus {
  color: #212529;
}
.u:focus {
  outline-width: 0;
}
.v:focus {
  border-top-color: #86b7fe;
}
.w:focus {
  border-right-color: #86b7fe;
}
.x:focus {
  border-bottom-color: #86b7fe;
}
.y:focus {
  border-left-color: #86b7fe;
}
@media (prefers-reduced-motion: reduce) {
  .k {
    transition-property: none;
  }
  .l {
    transition-duration: 0s;
  }
  .m {
    transition-delay: 0s;
  }
  .n {
    transition-timing-function: ease;
  }
  .ai::file-selector-button {
    transition-property: none;
  }
  .aj::file-selector-button {
    transition-duration: 0s;
  }
  .ak::file-selector-button {
    transition-delay: 0s;
  }
  .al::file-selector-button {
    transition-timing-function: ease;
  }
}


<input
  data-testid="file-upload"
  class="a ab ac ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b ba bb bc bd be bf bg bh bi bj bk bl bm bn bo bp bq br bs bt bu bv bw bx by bz c ca cb cc cd ce cf cg ch ci cj ck cl cm cn co cp d e f g h i j k l m n o p q r s t u v w x y z form-control file-upload"
  type="file"
/>;
"
`;

exports[`components/FileUploadField/FileUploadInput should display a file upload input of size medium 1`] = `
".a {
  appearance: none;
}
.b {
  background-clip: padding-box;
}
.c {
  background-color: #fff;
}
.d {
  color: #212529;
}
.e {
  display: block;
}
.f {
  font-size: 1rem;
}
.g {
  font-weight: 400;
}
.h {
  line-height: 1.5;
}
.i {
  width: 100%;
}
.j {
  cursor: pointer;
}
.o:disabled {
  background-color: #e9ecef;
}
.p:disabled {
  cursor: default;
}
.q:disabled {
  opacity: 1;
}
.z::file-selector-button {
  margin-right: 0.75rem;
}
.ab::file-selector-button {
  margin-end: 0.75rem;
}
.ac::file-selector-button {
  margin-inline-end: 0.75rem;
}
.ae::file-selector-button {
  color: #212529;
}
.af::file-selector-button {
  background-color: #f8f9fa;
}
.ag::file-selector-button {
  pointer-events: none;
}
.ah::file-selector-button {
  border-inline-end-width: 1px;
}
.am::file-selector-button:hover:not(:disabled):not([readonly]) {
  background-color: #e9ecef;
}
.an::file-selector-button {
  transition-property: color, background-color, border-color, box-shadow;
}
.ao::file-selector-button {
  transition-duration: 0.15s, 0.15s, 0.15s, 0.15s;
}
.ap::file-selector-button {
  transition-delay: ease-in-out, ease-in-out, ease-in-out, ease-in-out;
}
.aq::file-selector-button {
  transition-timing-function: ease, ease, ease, ease;
}
.ar::file-selector-button {
  border-top-left-radius: 0;
}
.as::file-selector-button {
  border-top-right-radius: 0;
}
.at::file-selector-button {
  border-bottom-right-radius: 0;
}
.au::file-selector-button {
  border-bottom-left-radius: 0;
}
.av::file-selector-button {
  border-top-width: 0;
}
.aw::file-selector-button {
  border-right-width: 0;
}
.ax::file-selector-button {
  border-bottom-width: 0;
}
.ay::file-selector-button {
  border-left-width: 0;
}
.az::file-selector-button {
  border-top-style: solid;
}
.ba::file-selector-button {
  border-right-style: solid;
}
.bb::file-selector-button {
  border-bottom-style: solid;
}
.bc::file-selector-button {
  border-left-style: solid;
}
.bd::file-selector-button {
  border-top-color: inherit;
}
.be::file-selector-button {
  border-right-color: inherit;
}
.bf::file-selector-button {
  border-bottom-color: inherit;
}
.bg::file-selector-button {
  border-left-color: inherit;
}
.bh::file-selector-button {
  margin-top: -0.375rem;
}
.bi::file-selector-button {
  margin-bottom: -0.375rem;
}
.bj::file-selector-button {
  margin-left: -0.75rem;
}
.bk::file-selector-button {
  padding-top: 0.375rem;
}
.bl::file-selector-button {
  padding-right: 0.75rem;
}
.bm::file-selector-button {
  padding-bottom: 0.375rem;
}
.bn::file-selector-button {
  padding-left: 0.75rem;
}
.bo {
  transition-property: border-color, box-shadow;
}
.bp {
  transition-duration: 0.15s, 0.15s;
}
.bq {
  transition-delay: ease-in-out, ease-in-out;
}
.br {
  transition-timing-function: ease, ease;
}
.bs {
  padding-top: 0.375rem;
}
.bt {
  padding-right: 0.75rem;
}
.bu {
  padding-bottom: 0.375rem;
}
.bv {
  padding-left: 0.75rem;
}
.bw {
  overflow-x: hidden;
}
.bx {
  overflow-y: hidden;
}
.by {
  border-top-left-radius: 0.375rem;
}
.bz {
  border-top-right-radius: 0.375rem;
}
.ca {
  border-bottom-right-radius: 0.375rem;
}
.cb {
  border-bottom-left-radius: 0.375rem;
}
.cc {
  border-top-width: 1px;
}
.cd {
  border-right-width: 1px;
}
.ce {
  border-bottom-width: 1px;
}
.cf {
  border-left-width: 1px;
}
.cg {
  border-top-style: solid;
}
.ch {
  border-right-style: solid;
}
.ci {
  border-bottom-style: solid;
}
.cj {
  border-left-style: solid;
}
.ck {
  border-top-color: #dee2e6;
}
.cl {
  border-right-color: #dee2e6;
}
.cm {
  border-bottom-color: #dee2e6;
}
.cn {
  border-left-color: #dee2e6;
}
.r:focus {
  background-color: #fff;
}
.s:focus {
  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
}
.t:focus {
  color: #212529;
}
.u:focus {
  outline-width: 0;
}
.v:focus {
  border-top-color: #86b7fe;
}
.w:focus {
  border-right-color: #86b7fe;
}
.x:focus {
  border-bottom-color: #86b7fe;
}
.y:focus {
  border-left-color: #86b7fe;
}
@media (prefers-reduced-motion: reduce) {
  .k {
    transition-property: none;
  }
  .l {
    transition-duration: 0s;
  }
  .m {
    transition-delay: 0s;
  }
  .n {
    transition-timing-function: ease;
  }
  .ai::file-selector-button {
    transition-property: none;
  }
  .aj::file-selector-button {
    transition-duration: 0s;
  }
  .ak::file-selector-button {
    transition-delay: 0s;
  }
  .al::file-selector-button {
    transition-timing-function: ease;
  }
}


<input
  data-testid="file-upload"
  class="a ab ac ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b ba bb bc bd be bf bg bh bi bj bk bl bm bn bo bp bq br bs bt bu bv bw bx by bz c ca cb cc cd ce cf cg ch ci cj ck cl cm cn d e f g h i j k l m n o p q r s t u v w x y z form-control file-upload"
  type="file"
/>;
"
`;

exports[`components/FileUploadField/FileUploadInput should display a file upload input of size small 1`] = `
".a {
  appearance: none;
}
.b {
  background-clip: padding-box;
}
.c {
  background-color: #fff;
}
.d {
  color: #212529;
}
.e {
  display: block;
}
.f {
  font-size: 0.875rem;
}
.g {
  font-weight: 400;
}
.h {
  line-height: 1.5;
}
.i {
  width: 100%;
}
.j {
  cursor: pointer;
}
.o:disabled {
  background-color: #e9ecef;
}
.p:disabled {
  cursor: default;
}
.q:disabled {
  opacity: 1;
}
.z::file-selector-button {
  margin-right: 0.5rem;
}
.ab::file-selector-button {
  margin-end: 0.75rem;
}
.ac::file-selector-button {
  margin-inline-end: 0.5rem;
}
.ae::file-selector-button {
  color: #212529;
}
.af::file-selector-button {
  background-color: #f8f9fa;
}
.ag::file-selector-button {
  pointer-events: none;
}
.ah::file-selector-button {
  border-inline-end-width: 1px;
}
.am::file-selector-button:hover:not(:disabled):not([readonly]) {
  background-color: #e9ecef;
}
.an::file-selector-button {
  -webkit-margin-end: 0.5rem;
}
.ao::file-selector-button {
  transition-property: color, background-color, border-color, box-shadow;
}
.ap::file-selector-button {
  transition-duration: 0.15s, 0.15s, 0.15s, 0.15s;
}
.aq::file-selector-button {
  transition-delay: ease-in-out, ease-in-out, ease-in-out, ease-in-out;
}
.ar::file-selector-button {
  transition-timing-function: ease, ease, ease, ease;
}
.as::file-selector-button {
  border-top-left-radius: 0;
}
.at::file-selector-button {
  border-top-right-radius: 0;
}
.au::file-selector-button {
  border-bottom-right-radius: 0;
}
.av::file-selector-button {
  border-bottom-left-radius: 0;
}
.aw::file-selector-button {
  border-top-width: 0;
}
.ax::file-selector-button {
  border-right-width: 0;
}
.ay::file-selector-button {
  border-bottom-width: 0;
}
.az::file-selector-button {
  border-left-width: 0;
}
.ba::file-selector-button {
  border-top-style: solid;
}
.bb::file-selector-button {
  border-right-style: solid;
}
.bc::file-selector-button {
  border-bottom-style: solid;
}
.bd::file-selector-button {
  border-left-style: solid;
}
.be::file-selector-button {
  border-top-color: inherit;
}
.bf::file-selector-button {
  border-right-color: inherit;
}
.bg::file-selector-button {
  border-bottom-color: inherit;
}
.bh::file-selector-button {
  border-left-color: inherit;
}
.bi::file-selector-button {
  margin-top: -0.25rem;
}
.bj::file-selector-button {
  margin-bottom: -0.25rem;
}
.bk::file-selector-button {
  margin-left: -0.5rem;
}
.bl::file-selector-button {
  padding-top: 0.25rem;
}
.bm::file-selector-button {
  padding-right: 0.5rem;
}
.bn::file-selector-button {
  padding-bottom: 0.25rem;
}
.bo::file-selector-button {
  padding-left: 0.5rem;
}
.bp {
  min-height: calc(1.5em + 0.5rem + 2px);
}
.bq {
  transition-property: border-color, box-shadow;
}
.br {
  transition-duration: 0.15s, 0.15s;
}
.bs {
  transition-delay: ease-in-out, ease-in-out;
}
.bt {
  transition-timing-function: ease, ease;
}
.bu {
  padding-top: 0.25rem;
}
.bv {
  padding-right: 0.5rem;
}
.bw {
  padding-bottom: 0.25rem;
}
.bx {
  padding-left: 0.5rem;
}
.by {
  overflow-x: hidden;
}
.bz {
  overflow-y: hidden;
}
.ca {
  border-top-left-radius: 0.25rem;
}
.cb {
  border-top-right-radius: 0.25rem;
}
.cc {
  border-bottom-right-radius: 0.25rem;
}
.cd {
  border-bottom-left-radius: 0.25rem;
}
.ce {
  border-top-width: 1px;
}
.cf {
  border-right-width: 1px;
}
.cg {
  border-bottom-width: 1px;
}
.ch {
  border-left-width: 1px;
}
.ci {
  border-top-style: solid;
}
.cj {
  border-right-style: solid;
}
.ck {
  border-bottom-style: solid;
}
.cl {
  border-left-style: solid;
}
.cm {
  border-top-color: #dee2e6;
}
.cn {
  border-right-color: #dee2e6;
}
.co {
  border-bottom-color: #dee2e6;
}
.cp {
  border-left-color: #dee2e6;
}
.r:focus {
  background-color: #fff;
}
.s:focus {
  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
}
.t:focus {
  color: #212529;
}
.u:focus {
  outline-width: 0;
}
.v:focus {
  border-top-color: #86b7fe;
}
.w:focus {
  border-right-color: #86b7fe;
}
.x:focus {
  border-bottom-color: #86b7fe;
}
.y:focus {
  border-left-color: #86b7fe;
}
@media (prefers-reduced-motion: reduce) {
  .k {
    transition-property: none;
  }
  .l {
    transition-duration: 0s;
  }
  .m {
    transition-delay: 0s;
  }
  .n {
    transition-timing-function: ease;
  }
  .ai::file-selector-button {
    transition-property: none;
  }
  .aj::file-selector-button {
    transition-duration: 0s;
  }
  .ak::file-selector-button {
    transition-delay: 0s;
  }
  .al::file-selector-button {
    transition-timing-function: ease;
  }
}


<input
  data-testid="file-upload"
  class="a ab ac ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b ba bb bc bd be bf bg bh bi bj bk bl bm bn bo bp bq br bs bt bu bv bw bx by bz c ca cb cc cd ce cf cg ch ci cj ck cl cm cn co cp d e f g h i j k l m n o p q r s t u v w x y z form-control file-upload"
  type="file"
/>;
"
`;

exports[`components/FileUploadField/FileUploadInput should process a file upload 1`] = `
".a {
  appearance: none;
}
.b {
  background-clip: padding-box;
}
.c {
  background-color: #fff;
}
.d {
  color: #212529;
}
.e {
  display: block;
}
.f {
  font-size: 1rem;
}
.g {
  font-weight: 400;
}
.h {
  line-height: 1.5;
}
.i {
  width: 100%;
}
.j {
  cursor: pointer;
}
.o:disabled {
  background-color: #e9ecef;
}
.p:disabled {
  cursor: default;
}
.q:disabled {
  opacity: 1;
}
.z::file-selector-button {
  margin-right: 0.75rem;
}
.ab::file-selector-button {
  margin-end: 0.75rem;
}
.ac::file-selector-button {
  margin-inline-end: 0.75rem;
}
.ae::file-selector-button {
  color: #212529;
}
.af::file-selector-button {
  background-color: #f8f9fa;
}
.ag::file-selector-button {
  pointer-events: none;
}
.ah::file-selector-button {
  border-inline-end-width: 1px;
}
.am::file-selector-button:hover:not(:disabled):not([readonly]) {
  background-color: #e9ecef;
}
.an::file-selector-button {
  transition-property: color, background-color, border-color, box-shadow;
}
.ao::file-selector-button {
  transition-duration: 0.15s, 0.15s, 0.15s, 0.15s;
}
.ap::file-selector-button {
  transition-delay: ease-in-out, ease-in-out, ease-in-out, ease-in-out;
}
.aq::file-selector-button {
  transition-timing-function: ease, ease, ease, ease;
}
.ar::file-selector-button {
  border-top-left-radius: 0;
}
.as::file-selector-button {
  border-top-right-radius: 0;
}
.at::file-selector-button {
  border-bottom-right-radius: 0;
}
.au::file-selector-button {
  border-bottom-left-radius: 0;
}
.av::file-selector-button {
  border-top-width: 0;
}
.aw::file-selector-button {
  border-right-width: 0;
}
.ax::file-selector-button {
  border-bottom-width: 0;
}
.ay::file-selector-button {
  border-left-width: 0;
}
.az::file-selector-button {
  border-top-style: solid;
}
.ba::file-selector-button {
  border-right-style: solid;
}
.bb::file-selector-button {
  border-bottom-style: solid;
}
.bc::file-selector-button {
  border-left-style: solid;
}
.bd::file-selector-button {
  border-top-color: inherit;
}
.be::file-selector-button {
  border-right-color: inherit;
}
.bf::file-selector-button {
  border-bottom-color: inherit;
}
.bg::file-selector-button {
  border-left-color: inherit;
}
.bh::file-selector-button {
  margin-top: -0.375rem;
}
.bi::file-selector-button {
  margin-bottom: -0.375rem;
}
.bj::file-selector-button {
  margin-left: -0.75rem;
}
.bk::file-selector-button {
  padding-top: 0.375rem;
}
.bl::file-selector-button {
  padding-right: 0.75rem;
}
.bm::file-selector-button {
  padding-bottom: 0.375rem;
}
.bn::file-selector-button {
  padding-left: 0.75rem;
}
.bo {
  transition-property: border-color, box-shadow;
}
.bp {
  transition-duration: 0.15s, 0.15s;
}
.bq {
  transition-delay: ease-in-out, ease-in-out;
}
.br {
  transition-timing-function: ease, ease;
}
.bs {
  padding-top: 0.375rem;
}
.bt {
  padding-right: 0.75rem;
}
.bu {
  padding-bottom: 0.375rem;
}
.bv {
  padding-left: 0.75rem;
}
.bw {
  overflow-x: hidden;
}
.bx {
  overflow-y: hidden;
}
.by {
  border-top-left-radius: 0.375rem;
}
.bz {
  border-top-right-radius: 0.375rem;
}
.ca {
  border-bottom-right-radius: 0.375rem;
}
.cb {
  border-bottom-left-radius: 0.375rem;
}
.cc {
  border-top-width: 1px;
}
.cd {
  border-right-width: 1px;
}
.ce {
  border-bottom-width: 1px;
}
.cf {
  border-left-width: 1px;
}
.cg {
  border-top-style: solid;
}
.ch {
  border-right-style: solid;
}
.ci {
  border-bottom-style: solid;
}
.cj {
  border-left-style: solid;
}
.ck {
  border-top-color: #dee2e6;
}
.cl {
  border-right-color: #dee2e6;
}
.cm {
  border-bottom-color: #dee2e6;
}
.cn {
  border-left-color: #dee2e6;
}
.r:focus {
  background-color: #fff;
}
.s:focus {
  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
}
.t:focus {
  color: #212529;
}
.u:focus {
  outline-width: 0;
}
.v:focus {
  border-top-color: #86b7fe;
}
.w:focus {
  border-right-color: #86b7fe;
}
.x:focus {
  border-bottom-color: #86b7fe;
}
.y:focus {
  border-left-color: #86b7fe;
}
@media (prefers-reduced-motion: reduce) {
  .k {
    transition-property: none;
  }
  .l {
    transition-duration: 0s;
  }
  .m {
    transition-delay: 0s;
  }
  .n {
    transition-timing-function: ease;
  }
  .ai::file-selector-button {
    transition-property: none;
  }
  .aj::file-selector-button {
    transition-duration: 0s;
  }
  .ak::file-selector-button {
    transition-delay: 0s;
  }
  .al::file-selector-button {
    transition-timing-function: ease;
  }
}


<input
  data-testid="file-upload"
  class="a ab ac ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b ba bb bc bd be bf bg bh bi bj bk bl bm bn bo bp bq br bs bt bu bv bw bx by bz c ca cb cc cd ce cf cg ch ci cj ck cl cm cn d e f g h i j k l m n o p q r s t u v w x y z form-control file-upload"
  type="file"
  id="file-upload"
/>;
"
`;
